# automated-synthesis-of-probabilistic-termination-proofs

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
languages/: default.md
src/: \  alts.rs  lib.rs  linear_system.rs  main.rs  misc.rs  parsers.rs
src/alts/: arithmetic.rs  formula.rs  guard.rs  mod.rs
src/linear_generators/: farkas_based.rs
src/parsers/: default.rs  linear_polynomial.rs  mod.rs
src/parsers/grammars/: \  default.pest  default.rs  linear_polynomial.pest  linear_polynomial.rs  misc.rs  mod.rs  output  test
src/pts/: guard.rs  inequality.rs  invariant.rs  linear_polynomial.rs  location.rs  misc.rs  mod.rs  relation.rs  system.rs  transition.rs  variable_map.rs  variables.rs
src/pts/linear_polynomial/: coefficient.rs  constant.rs  mod.rs  term.rs
src/pts/variable/: mod.rs  program_variable.rs  set.rs
src/ranking_function_generators/: farkas_based.rs  mod.rs
src/ranking_function_generators/linear_solvers/: minilp.rs  mod.rs
test_data/code/default/: invariants_snippet  simple_if_program  simple_logic_while_snippet  simple_nondet_program  while_nondet_program
test_data/dot/: default.gv  simple_odds_program.gv  trivial_nondet_program.gv  trivial_program.gv  while_logic_program.gv  while_nondet_program.gv
test_programs/: complex_program  simple_odds_program  simple_odds_snippet  simple_program  trivial_odds_program  while_logic_program  while_prob_program
tests/parsers/default/: complex_program  invariant_program  simple_choose_program  simple_if_program  simple_nondet_snippet  simple_program  (+11 more)
tests/pts/: default.gv  simple_choose_program.gv  simple_if_program.gv  simple_nondet_program.gv  simple_odds_program.gv  simple_program.gv  trivial_choose_program.gv  trivial_if_program.gv  trivial_odds_program.gv  trivial_program.gv  while_logic_program.gv  while_nondeterministic_program.gv  while_prob_program.gv
(+33 files in other folders)
