[package]
name = "automated_synthesis_of_probabilistic_termination_proofs"
version = "0.1.0"
edition = "2021"

[dependencies]
dot = "0.1.4"
indexmap = "2.0.2"
pest = "2.5"
pest_derive = "2.5"
minilp = "0.2.2"

[dev-dependencies]
lazy_static = "1.4.0"
pest-test = {git = "https://github.com/jdidion/pest-test.git"}
pest-test-gen = {git = "https://github.com/jdidion/pest-test.git"}
pretty_assertions = "1.4.0"
